skins/standard/global.css
/* The contents of this file are subject to the Mozilla Public
  * License Version 1.1 (the "License"); you may not use this file
  * except in compliance with the License. You may obtain a copy of
  * the License at http://www.mozilla.org/MPL/
  *
  * Software distributed under the License is distributed on an "AS
  * IS" basis, WITHOUT WARRANTY OF ANY KIND, either express or
  * implied. See the License for the specific language governing
  * rights and limitations under the License.
  *
  * The Original Code is the Bugzilla Bug Tracking System.
  *
  * The Initial Developer of the Original Code is Netscape Communications
  * Corporation. Portions created by Netscape are
  * Copyright (C) 1998 Netscape Communications Corporation. All
  * Rights Reserved.
  *
  * Contributor(s): Byron Jones <bugzilla@glob.com.au>
  *                 Christian Reis <kiko@async.com.br>
  *                 Vitaly Harisov <vitaly@rathedg.com>
  *                 Svetlana Harisova <light@rathedg.com>
  *                 Marc Schumann <wurblzap@gmail.com>
  */

/* global (begin) */
    body {
        font-family: sans-serif;
        color: #000;
        background: #fff url("global/body-back.gif") repeat-x;
    }
    body, td, th, input {
        font-family: Verdana, sans-serif;
        font-size: small;
    }    
/* global (end) */

/* header (begin) */
    #header {
        margin-bottom: 1em;
        padding-bottom: 2px;
    }

    #header form {
        font-size: 85%;
        display: inline;
    }

    #header .links {
        font-size: 85%;
        border-left: 1px solid silver;
        border-right: 1px solid silver;
        border-bottom: 1px solid silver;
        -moz-border-radius-bottomleft: 5px;
        -moz-border-radius-bottomright: 5px;
        padding: 0.5em;
    }

    #message {
        border: 1px solid red;
        margin: 0.3em 0em;
        padding: 0.3em;
        color: green;
    }

/* header (end)   */

/* banner (begin) */
    #banner {
    }

/* banner (end) */

/* titles (begin) */
    #titles {
        width: 100%;
        background-color: #404D6C;
        color: #fff;
        -moz-border-radius-topleft: 5px;
        -moz-border-radius-topright: 5px;
        font-size: 110%;
        margin: 0;
        padding: 0.5em;
        vertical-align: bottom;
    }

    #titles a {
        color: #fff;
    }

    #titles p {
        margin: 0;
        padding: 0;
    }

    #titles #title {
        font-weight: bold;
        white-space: nowrap;
    }

    #titles #subtitle {
        font-weight: normal;
        width: 100%;
        text-align: center;
    }

    #titles #information {
        font-weight: normal;
        text-align: right;
        font-size: 90%;
        white-space: nowrap;
    }

/* titles (end) */

/* footer (begin) */
    #footer {
        clear: both;
        margin-top: 5px;
        width: 100%;
        background: #edf2f2;
        border-top: 1px solid #ddd;
        border-bottom: 1px solid #ddd;
    }

    #footer form {
        display: inline;
    }

    #footer .btn,
    #footer .txt {
        font-size: 80%;
    }

    #footer #useful-links {
        display: table;
        padding-left: 1ex;
        padding-right: 1ex;
    }

    #footer #links-actions,
    #footer #links-saved,
    #footer #links-special {
        display: table-row;
        list-style-type: none;
    }

    #footer .label {
        display: table-cell;
        white-space: nowrap;
        vertical-align: top;
    }

    #footer .links {
        display: table-cell;
        vertical-align: top;
    }
/* footer (end) */

/* link lists (begin) */
    ul.links {
        margin: 0;
        padding: 0;
        list-style-type: none;
    }

    ul.links li {
        display: inline;
        white-space: nowrap;
    }
/* link lists (end) */

/* tabs (begin) */
    .tabs td {
        background: #eee;
        text-align: center;
        border-style: solid;
        border-color: black;
        border-width: 0px 0px 2px 0px;
    }
        
    .tabs td.selected {
        background: white;
        border-width: 2px 2px 0px 2px;
    }

    .tabs td.spacer {
        background: white;
    }
/* tabs (end) */

/* generic (begin) */
    :link {
        color: #039;
    }

    :visited {
        color: #636;
    }

    :link:hover, :visited:hover {
        color: #333;
    }

    :link:active, :link:active {
        color: #000;
    }

    .clickable_area {
        cursor: pointer;
    }
/* generic (end) */

div#docslinks {
    float: right;
    border: 1px solid black;
    padding: 1ex;
    font-size: 80%;
}

#docslinks h2 {
    margin: 0;
}

.bz_obsolete {
    text-decoration: line-through;
}
.bz_inactive {
    text-decoration: line-through;
}
.bz_closed,
.bz_CLOSED td {
    text-decoration: line-through;
}
.bz_private {
    color: darkred;
    background: #f3eeee;
}
.bz_disabled {
    color: #a0a0a0;
}

.bz_comment {
    margin-bottom: 2em;
}

.bz_first_comment {
}

.bz_comment_head, .bz_first_comment_head {
    background-color: #e0e0e0;
}
.bz_comment_hilite pre {
    background-color: lightgreen;
    margin: 0;
    padding: 1em 0;
}

span.quote {
    color: #65379c;
}

table#flags th,
table#flags td {
    vertical-align: middle;
    text-align: left;
}

.flag_select {
    min-width: 3em;
}

.throw_error {
    background-color: #ff0000;
    color: black;
    font-size: 120%;
    margin: 1em;
    padding: 0.5em 1em;
}

dt {
    font-weight: bolder;
}
body > dl > dt {
    border-top: dotted gray thin;
}
dl dl > dt {
    border-top: none;
}

/* Style of the attachment table and time tracking table */
#attachment_table {
    border-collapse: collapse;
    width: 40em;
    border: 1px solid #333333;
}

#attachment_table th, .bz_attach_footer, .bz_time_tracking_table th {
    background-color: #E0E0E0;
    color: black;
}

#attachment_table td, .bz_time_tracking_table th, .bz_time_tracking_table td {
    border: 1px solid #333333;
}

.bz_attach_extra_info {
    font-size: smaller;
}

.bz_attach_flags, .bz_attach_footer {
    white-space: nowrap;
}

.bz_attach_view_hide {
    float: right;
    padding-left: 1em;
}

/* For bug fields */
.uneditable_textarea {
    white-space: pre;
    font-family: monospace;
}

div.user_match {
    margin-bottom: 1em;
}

.box {
    border: 1px solid black;
    color: black;
    background-color: #ffc;
    margin: 1em;
    padding: 0.5em 1em;
}

.collapsed {
    display: none;
}

/* Rules specific for printing */
@media print {
    #header, #footer {
        display: none;
    }

    body {
        background-image: none;
        background-color: #fff;
    }
}

.field_label {
    text-align: right;
    vertical-align: top;
    font-weight: bold;
}
.field_value, form#Create th, form#Create td {
    vertical-align: top;
}

.calendar_button {
    background: transparent url("global/calendar.png") no-repeat;
    width: 20px;
    height: 20px;
    vertical-align: middle;
}
.calendar_button span { display: none }
/* These classes are set by YUI. */
.yui-calcontainer {
    display: none; 
    background-color: white; 
    padding: 10px;
    border: 1px solid #404D6C;
}

form#Create th {
    text-align: right;
}

form#Create .comment {
    vertical-align: top;
    overflow: auto;
    color: green;
    margin: 0 0.5em;
    padding: 0.3em;
}

#keyword-chooser {
    padding: 10px;
    position: absolute;
    z-index: 25;
    top: 50px;
    left: 50px;
    border: 2px solid #404D6C;
    -moz-border-radius: 5px;
    background: white;
}

